# markdown-viewer

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USAGE.md  tarpaulin-report.html
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: debug_table.rs  sample.md  test_nested_list.rs  workbench.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs
src/markdown/: highlighter.rs  mod.rs  parser.rs  parser_test.rs  toc.rs
src/tui/: app.rs  events.rs  mod.rs  navigation.rs  themes.rs  ui.rs  ui_test.rs
src/watcher/: live_reload.rs  mod.rs
tests/: debug_parser.rs  integration_tests.rs  test_checkbox_events.rs  test_list_indent_debug.rs  test_lists.rs  test_nested_list_events.rs  test_table_events.rs  test_tables.rs
